--- a/index.html
+++ b/index.html
@@ -10,22 +10,28 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-md">
-          <div class="card">
-            <button id="typeGenerator" type="button" class="btn btn-lg btn-outline-primary selector-button" onClick="generateType()">Generate Type</button>
-            <p id="type" class="content">Click button to generate type</p>
+        <div class="col-sm">
+          <div class="card-area">
+            <div class="card">
+              <button id="typeGenerator" type="button" class="btn btn-lg btn-outline-primary selector-button" onClick="generateType()">Generate Type</button>
+              <p id="type" class="content">Click button to generate type</p>
+            </div>
           </div>
         </div>
-        <div class="col-md">
-          <div class="card">
-            <button id="subjectGenerator" type="button" class="btn btn-lg btn-outline-primary selector-button" onClick="generateSubject()">Generate Subject</button>
-            <p id="subject" class="content">Click button to generate subject</p>
+        <div class="col-sm">
+          <div class="card-area">
+            <div class="card">
+              <button id="subjectGenerator" type="button" class="btn btn-lg btn-outline-primary selector-button" onClick="generateSubject()">Generate Subject</button>
+              <p id="subject" class="content">Click button to generate subject</p>
+            </div>
           </div>
         </div>
-        <div class="col-md">
-          <div class="card">
-            <button id="exemplarGenerator" type="button" class="btn btn-lg btn-outline-primary selector-button" onClick="generateExample()">Generate Example</button>
-            <p id="example" class="content">Click button to generate example</p>
+        <div class="col-sm">
+          <div class="card-area">
+            <div class="card">
+              <button id="exemplarGenerator" type="button" class="btn btn-lg btn-outline-primary selector-button" onClick="generateExample()">Generate Example</button>
+              <p id="example" class="content">Click button to generate example</p>
+            </div>
           </div>
         </div>
       </div>
